# pypsark-livy-runner

./: .gitignore  README.md  config.example.yaml  main.py  pyproject.toml
examples/: test_hive_job.py  test_spark_job.py
src/pyspark_livy_runner/: __init__.py  config.py  http.py  session.py
src/pyspark_livy_runner/utils/: livy_clean.py  livy_list.py  livy_logs.py
